...

    static var oneInsoles: String {
        NSLocalizedString("1 Insoles", bundle: .module, value: "1 Insoles", comment: "")
    }

    static var oneMinute: String {
        NSLocalizedString("1 minute", bundle: .module, value: "1 minute", comment: "")
    }

    static var threeMinutes: String {
        NSLocalizedString("3 minutes", bundle: .module, value: "3 minutes", comment: "")
    }

...

    static var withinNormalRange65To100: String {
        NSLocalizedString("65-100: Within normal range", bundle: .module, value: "65-100: Within normal range", comment: "")
    }

    static var addNoteAboutMeasurement: String {
        NSLocalizedString("Add a note about the measurement", bundle: .module, value: "Add a note about the measurement", comment: "")
    }

    static var againstTheThigh: String {
        NSLocalizedString("Against the thigh", bundle: .module, value: "Against the thigh", comment: "")
    }

...

    static var reload: String {
        NSLocalizedString("Reload", bundle: .module, value: "Reload", comment: "")
    }

    static var reviewFollowingTags: String {
        NSLocalizedString("Review the following tags", bundle: .module, value: "Review the following tags", comment: "")
    }

    static var score: String {
        NSLocalizedString("Score", bundle: .module, value: "Score", comment: "")
    }

...
    
    static var stopIfUnComfy: String {
        NSLocalizedString("Stop if you feel uncomfortable.", bundle: .module, value: "Stop if you feel uncomfortable.", comment: "")
    }

    static var whatAssistiveDeviceDidYouUse: String {
        NSLocalizedString("What assistive device did you use?", bundle: .module, value: "What assistive device did you use?", comment: "")
    }
    
    static var whatIsThePatientsLevelOfAssistance: String {
        NSLocalizedString("What is the patient’s level of assistance?", bundle: .module, value: "What is the patient’s level of assistance?", comment: "")
    }

...
